--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,7 @@ services:
       - ./notebooks:/home/jovyan/work
     ports:
       - "8888:8888"
+    env_file:
+      - .env
     environment:
       - JUPYTER_ENABLE_LAB=yes
